--- a/MatrixTask/UnitTests/UnitTests.csproj
+++ b/MatrixTask/UnitTests/UnitTests.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GarmonicTests.cs" />
+    <Compile Include="JokerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
